--- a/style.css
+++ b/style.css
@@ -760,3 +760,47 @@ ul li {
   cursor: pointer;
   border-radius: 5px;
 }
+
+.debugDiv{
+  color: white;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.debugDiv h3{
+  color: white;
+}
+
+.debugTable {
+  display: flex;
+  gap: 5px;
+  color: white;
+  margin: 0 auto;
+  max-width: 700px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.debugTable span {
+  display: flex;
+  align-content: center;
+  justify-content: flex-end;
+  width: 200px;
+}
+
+.debugTable label {
+  text-align: right;
+  max-width: 200px;
+}
+
+.debugTable input {
+  width: 50px;
+}
+
+.debugDiv button {
+  margin: 10px;
+}
